k8sopp/dbpooler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-pooler
  namespace: perpetua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-pooler
  template:
    metadata:
      labels:
        app: db-pooler
    spec:
      containers:
        - name: db-pooler
          image: ashutoshpawar29/perps-backend:v1
          imagePullPolicy: IfNotPresent
          command: ["bun", "run", "apps/backend/cronjobs/databasepooler.ts"]
          resources:
            requests:
              cpu: "150m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
