k8sopp/engine.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  namespace: perpetua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: ashutoshpawar29/perps-backend:v1
          imagePullPolicy: IfNotPresent
          workingDir: /app/apps/backend/engine 
          command: ["bun", "run", "index.ts"]
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
