k8sopp/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: perpetua
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http-ws
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: perpetua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ashutoshpawar29/perps-backend:v1
          imagePullPolicy: IfNotPresent
          command: ["bun", "run", "apps/ws/index.ts"]
          ports:
            - containerPort: 3000
              name: http-ws
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
