k8sopp/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: perpetua
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: perpetua
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ashutoshpawar29/perps-frontend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "128Mi"
