k8sopp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perpetua-ingress
  namespace: perpetua
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "backend-service"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - perpetua.ashutoshpawar.in
        - api.perpetua.ashutoshpawar.in
      secretName: perpetua-tls-cert
  rules:
    # 1. Frontend Web Terminal
    - host: perpetua.ashutoshpawar.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    # 2. REST API + WebSocket Gateway
    - host: api.perpetua.ashutoshpawar.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
